2019/04/15

- Added CONTRIBUTING, contributors and CHANGELOG
- Revised README
- Updated lang.php

  -s1udge