@@ -25,7 +25,36 @@
   							 <li class="list-group-item"><i class="icon-ok text-info"></i>For standard computers</li>
                  <li class="list-group-item"><i class="icon-ok text-info"></i>Interface: MATE</li>
                  <li class="list-group-item"><i class="icon-ok text-info"></i>Format: ISO Hybrid (iso9660)</li>
-                 <li class="list-group-item"><i class="icon-ok text-info"></i>Size: 3.7GB</li>
+                 <li class="list-group-item"><i class="icon-ok text-info"></i>Size:4GB</li>
+    						</ul>
+    						<div class="panel-footer">
+    							<a class="btn btn-lg btn-block btn-info" href="https://cdimage.parrotsec.org/parrot/iso/<?php echo CONFIG_SYSTEM_VERSION; ?>/Parrot-security-<?php echo CONFIG_SYSTEM_VERSION; ?>_amd64.iso"><?php echo $lang['index-3']; ?></a>
+    						</div>
+                <div class="panel-footer">
+    							<a class="btn btn-lg btn-block btn-info" target="_blank" href="https://cdimage.parrotsec.org/parrot/iso/<?php echo CONFIG_SYSTEM_VERSION; ?>/Parrot-security-<?php echo CONFIG_SYSTEM_VERSION; ?>_amd64.iso.mirrorlist"><?php echo $lang['download-security-9']; ?></a>
+    						</div>
+                <div class="panel-footer">
+    							<a class="btn btn-lg btn-block btn-info" href="https://cdimage.parrotsec.org/parrot/iso/<?php echo CONFIG_SYSTEM_VERSION; ?>/Parrot-security-<?php echo CONFIG_SYSTEM_VERSION; ?>_amd64.iso.torrent"><?php echo $lang['download-security-10']; ?></a>
+    						</div>
+                <div class="panel-footer">
+                  <a class="btn btn-lg btn-block btn-info" target="_blank" href="https://cdimage.parrotsec.org/parrot/iso/<?php echo CONFIG_SYSTEM_VERSION; ?>/signed-hashes.txt"><?php echo $lang['download-security-11']; ?></a>
+    						</div>
+    					</div>
+            </div>
+
+            <div class="col-lg-4 col-md-4 col-md-offset-2 col-lg-offset-2 text-center">
+              <div class="panel download panel-blue">
+                <div class="panel-heading arrow_box text-center">
+                  <h3>Live+Installer ISO</h3>
+                </div>
+                <div class="panel-body text-center">
+                  <p class="lead" style="font-size:40px"><strong>KDE Security Edition</strong></p>
+                </div>
+                <ul class="list-group list-group-flush text-center">
+  							 <li class="list-group-item"><i class="icon-ok text-info"></i>For powerful and modern computers</li>
+                 <li class="list-group-item"><i class="icon-ok text-info"></i>Interface: KDE</li>
+                 <li class="list-group-item"><i class="icon-ok text-info"></i>Format: ISO Hybrid (iso9660)</li>
+                 <li class="list-group-item"><i class="icon-ok text-info"></i>Size:4GB</li>
     						</ul>
     						<div class="panel-footer">
     							<a class="btn btn-lg btn-block btn-info" href="https://cdimage.parrotsec.org/parrot/iso/<?php echo CONFIG_SYSTEM_VERSION; ?>/Parrot-security-<?php echo CONFIG_SYSTEM_VERSION; ?>_amd64.iso"><?php echo $lang['index-3']; ?></a>
