@@ -1,18 +1,17 @@
 <?php
 
-const CONFIG_SITE_NAME = 'Parrot Linux';
+const CONFIG_SITE_NAME = 'Parrot OS';
 const CONFIG_SITE_SLOGAN = 'The best choice for security experts, developers and crypto-addicted people.';
 const CONFIG_SITE_DESCRIPTION = 'Discover our awesome cyber security GNU/Linux environment. It includes a full portable laboratory for security and digital forensics experts, but it also includes all you need to develop your own softwares or protect your privacy with anonymity and crypto tools.';
 const CONFIG_SITE_URL = 'https://www.parrotsec.org/';
 const CONFIG_SITE_URL_STATIC_RESOURCES = 'https://www.parrotsec.org/';
 const CONFIG_SITE_AUTOR = 'Lorenzo Faletra';
 const CONFIG_SITE_LANG = 'en';
-const CONFIG_SYSTEM_VERSION = '4.5.1';
+const CONFIG_SYSTEM_VERSION = '4.6';
 
-const PARROT_FULL_SIZE_64 = '3.6GB';
-const PARROT_FULL_SIZE_32 = '3.7GB';
+const PARROT_FULL_SIZE_64 = '4GB';
 
-const PARROT_LITE_SIZE_64 = '1.78GB';
-const PARROT_LITE_SIZE_32 = '1.82GB';
+const PARROT_LITE_SIZE_64 = '2GB';
+
 
 ?>
