@@ -1,3 +1,9 @@
+2019/04/25
+
+- Added KDE Security Editon and prepped for 4.6
+
+  -s1udge
+
 2019/04/15
 
 - Added CONTRIBUTING, contributors and CHANGELOG
